--- a/Client/src/templates/table.html
+++ b/Client/src/templates/table.html
@@ -1,6 +1,6 @@
 {% macro table(headings, data) %}
     <div class="card shadow rounded">
-        <div class="table-container">
+        <div class="card-body">
             <table class="table table-striped-columns">
             <thead>
                 <tr>
