--- a/Client/src/templates/base.html
+++ b/Client/src/templates/base.html
@@ -11,7 +11,7 @@
 
 
     <!-- custom stylesheets -->
-    <link rel="stylesheet" href="/static/style.css"
+    <link rel="stylesheet" href="/static/css/table.css"/>
     
     {% block extra_css %}{% endblock %}
 </head>
