--- a/Client/src/templates/home.html
+++ b/Client/src/templates/home.html
@@ -23,11 +23,14 @@
                     </form>
                 </div>
             </div>
-            <div class="col-md-6">
-                
+        </div>
+        <div class="row">
+            <div class="card shadow rounded">
+                <div class="card-body table-container">
+                    {{ table(headings, data) }}
+                </div>
             </div>
         </div>
-        {{ table(headings, data) }}
 </div>
 
 {% endblock %}
