--- a/Client/src/templates/base.html
+++ b/Client/src/templates/base.html
@@ -11,11 +11,16 @@
 
 
     <!-- custom stylesheets -->
+    <link rel="stylesheet" href="/static/css/tristate_checkbox.css"/>
     <link rel="stylesheet" href="/static/css/table.css"/>
     
     {% block extra_css %}{% endblock %}
 </head>
 <body>
+    <!-- Bootstrap 5 JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/js/tristate_checkbox.js"></script>
+    
     <nav class="navbar navbar-light bg-ligth">
         <div class="container">
             <label class="navbar-brand" href="/">BritishJailCells</label>
@@ -29,9 +34,6 @@
     <div class="container mt-4 mr-2 ml-2 mb-1">
         {% block page_content %}{% endblock %}
     </div>
-
-    <!-- Bootstrap 5 JS Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
         function toggleTheme() {
