--- a/Client/src/templates/base.html
+++ b/Client/src/templates/base.html
@@ -13,6 +13,9 @@
     <!-- custom stylesheets -->
     <link rel="stylesheet" href="/static/css/tristate_checkbox.css"/>
     <link rel="stylesheet" href="/static/css/table.css"/>
+
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="/static/assets/jail.svg">
     
     {% block extra_css %}{% endblock %}
 </head>
