--- a/Client/src/templates/home.html
+++ b/Client/src/templates/home.html
@@ -15,6 +15,14 @@
                             <input type="text" class="form-control mb-3" id="searchField" name="searchTerms" placeholder="Search..." value="{% if session['searchTerms'] is not none %}{{ session['searchTerms'] }}{% endif %}"/>
                         </div>
                         <div class="row">
+                            <div class="col-6" style="padding-left: 0;">
+                                <input type="number" class="form-control mb-3" id="maxMonthlyRentField" name="maxMonthlyRent" placeholder="Max monthly rent..." value="{% if session['maxMonthlyRent'] is not none%}{{ session['maxMonthlyRent'] }}{% endif %}" />
+                            </div>
+                            <div class="col-6" style="padding-right: 0;">
+                                <input type="number" class="form-control mb-3" id="maxSharedWithField" name="maxSharedWith" placeholder="Max shared with..." value="{% if session['maxSharedWith'] is not none%}{{ session['maxSharedWith'] }}{% endif %}" />
+                            </div>
+                        </div>
+                        <div class="row">
                             {{ tristate_checkbox(name="furnished", label="Furnished") }}
                             {{ tristate_checkbox(name="liveInLandlord", label="Live in Landlord") }}
                             {{ tristate_checkbox(name="billsIncluded", label="Bills included") }}
