--- a/Client/src/templates/base.html
+++ b/Client/src/templates/base.html
@@ -23,6 +23,7 @@
     <!-- Bootstrap 5 JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/static/js/tristate_checkbox.js"></script>
+    <script src="/static/js/toggle_theme.js"></script>
     
     <nav class="navbar navbar-light bg-ligth">
         <div class="container">
@@ -37,26 +38,6 @@
     <div class="container mt-4 mr-2 ml-2 mb-1">
         {% block page_content %}{% endblock %}
     </div>
-
-    <script>
-        function toggleTheme() {
-            const htmlElement = document.querySelector('html');
-            const currentTheme = htmlElement.getAttribute('data-bs-theme');
-            const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
-            htmlElement.setAttribute('data-bs-theme', newTheme);
-
-            const iconDark = document.getElementById('icon-dark');
-            const iconLight = document.getElementById('icon-light');
-            
-            if (newTheme === 'dark') {
-                iconDark.style.display = 'inline';
-                iconLight.style.display = 'none';
-            } else {
-                iconDark.style.display = 'none';
-                iconLight.style.display = 'inline';
-            }
-        }
-    </script>
     
     {% block extra_js %}{% endblock %}
 </body>
