Added main css style

--- a/Client/src/templates/base.html
+++ b/Client/src/templates/base.html
@@ -11,8 +11,7 @@
 
 
     <!-- custom stylesheets -->
-    <link rel="stylesheet" href="/static/css/tristate_checkbox.css"/>
-    <link rel="stylesheet" href="/static/css/table.css"/>
+    <link rel="stylesheet" href="/static/css/style.css"/>
 
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="/static/assets/jail.svg">
