Moved macros to separate folder

--- a/Client/src/templates/home.html
+++ b/Client/src/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
-{% from 'table.html' import table %}
-{% from 'tristate_checkbox.html' import tristate_checkbox %}
+{% from 'macros/table.html' import table %}
+{% from 'macros/tristate_checkbox.html' import tristate_checkbox %}
 
 {% block page_content %}
 
