--- a/Client/src/templates/room.html
+++ b/Client/src/templates/room.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% from 'room_label.html' import room_label %}
+{% from 'macros/room_label.html' import room_label %}
 
 {% block page_content %}
 
