--- a/Client/src/static/css/horizontal_break.css
+++ b/Client/src/static/css/horizontal_break.css
@@ -3,28 +3,32 @@
     position: relative;
     outline: 0;
     border: 0;
-    color: black;
+    color: var(--bs-body-color);
     text-align: center;
     height: 1.5em;
     opacity: 0.5;
-    &:before {
-        content: '';
-        background: linear-gradient(to right, transparent, #818078, transparent);
-        position: absolute;
-        left: 0;
-        top: 50%;
-        width: 100%;
-        height: 1px;
-    }
-    &:after {
-        content: attr(data-content);
-        position: relative;
-        display: inline-block;
-        color: black;
+}
 
-        padding: 0 0.5em;
-        line-height: 1.5em;
-        color: #818078;
-        background-color: #fcfcfa;
-    }
+.hr-text:before {
+    content: '';
+    background: linear-gradient(to right, 
+        transparent, 
+        var(--bs-secondary-color), 
+        transparent
+    );
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 1px;
+}
+
+.hr-text:after {
+    content: attr(data-content);
+    position: relative;
+    display: inline-block;
+    padding: 0 0.5em;
+    line-height: 1.5em;
+    color: var(--bs-secondary-color);
+    background-color: var(--bs-body-bg);
 }
