--- a/Client/src/templates/room.html
+++ b/Client/src/templates/room.html
@@ -5,32 +5,47 @@
 {% block page_content %}
 
 <div class="mt-5">
-        <h1 class="text-center">Room id: {{ id }}</h1>
-        <div class="card shadow mb-3">
-            <div class="card-body">
-                {{ room_label("Title:", name) }}
-                {{ room_label("Rent:", "£"+monthly_rent|string) }}
-                <hr data-content="Location" class="hr-text"/>
-                {{ room_label("City", city) }}
-                {{ room_label("County", county) }}
-                {{ room_label("Postcode", postcode) }}
-                {{ room_label("Latitude", latitude) }}
-                {{ room_label("Longitude", longitude) }}
-                <hr data-content="Weather" class="hr-text"/>
-                {{ room_label("Current:", current_weather|string + "°C") }}
-                {{ room_label("7 day average:", average_weather|string + "°C") }}
-                <hr data-content="Details" class="hr-text"/>
-                {{ room_label("Spoken Languages:", spoken_languages) }}
-                {{ room_label("Available date:", available_date) }}
-                {{ room_label("Shared with:", shared_with) }}
-                <hr data-content="Amenities" class="hr-text"/>
-                {{ room_label("Amenities:", amenities) }}
-                {{ room_label("Furnished:", furnished) }}
-                {{ room_label("Live in landlord:", live_in_landlord) }}
-                {{ room_label("Bills included:", bills_included) }}
-                {{ room_label("Bathroom shared:", bathroom_shared) }}
+        <h1 class="text-center">Room id: {{ room_data.id }}</h1>
+        <div class="row">
+            <div class="col-6">
+                <div class="card shadow mb-3">
+                    <div class="card-body">
+                        <hr data-content="General" class="hr-text"/>
+                        {{ room_label("Title:", room_data.name) }}
+                        {{ room_label("Rent:", "£"+room_data.price_per_month_gbp|string) }}
+                        <hr data-content="Location" class="hr-text"/>
+                        {{ room_label("City", room_data.location.city) }}
+                        {{ room_label("County", room_data.location.county) }}
+                        {{ room_label("Postcode", room_data.location.postcode) }}
+                        {{ room_label("Latitude", room_data.coordinates.latitude) }}
+                        {{ room_label("Longitude", room_data.coordinates.longitude) }}
+
+                        <hr data-content="Weather" class="hr-text"/>
+                        {{ room_label("Current:", current_weather|string + "°C") }}
+                        {{ room_label("7 day average:", average_weather|string + "°C") }}
+                        
+                        <hr data-content="Details" class="hr-text"/>
+                        {{ room_label("Spoken Languages:", spoken_languages) }}
+                        {{ room_label("Available date:", available_date) }}
+                        {{ room_label("Shared with:", room_data.details.shared_with|string) }}
+                        <hr data-content="Amenities" class="hr-text"/>
+                        {{ room_label("Amenities:", amenities) }}
+                        {{ room_label("Furnished:", room_data.details.furnished) }}
+                        {{ room_label("Live in landlord:", room_data.details.live_in_landlord) }}
+                        {{ room_label("Bills included:", room_data.details.bills_included) }}
+                        {{ room_label("Bathroom shared:", room_data.details.bathroom_shared) }}
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="card shadow mb-3">
+                    <div class="card-body">
+                        <hr data-content="History" class="hr-text"/>
+                    </div>
+                </div>
             </div>
         </div>
+
 </div>
 
 {% endblock %}
