--- a/Client/src/templates/macros/room_label.html
+++ b/Client/src/templates/macros/room_label.html
@@ -1,9 +1,9 @@
 {% macro room_label(text, value) %}
-    <div class="row">
-        <div class="col-2">
+    <div class="row justify-content-center">
+        <div class="col-6 d-flex justify-content-end">
             <b>{{text}}</b>
         </div>
-        <div class="col-10">
+        <div class="col-6 d-flex justify-content-start">
             <label>
                 {% if value is boolean %}
                     {% if value %} 
