--- a/Client/src/templates/macros/table.html
+++ b/Client/src/templates/macros/table.html
@@ -33,9 +33,8 @@
         </td>
         {% endfor %}
         <td>
-            {# Updated button with onclick handler #}
             <button type="button" class="btn" onclick="window.location.href='{{ url_for('app.room', id=row_id) }}'">
-                <i class="bi bi-three-dots-vertical"></i>
+                <i class="bi bi-arrows-fullscreen"></i>
             </button>
         </td>
     </tr>
