--- a/Client/src/templates/base.html
+++ b/Client/src/templates/base.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+    <!-- Bootstrap 5 JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- custom stylesheets -->
     <link rel="stylesheet" href="/static/css/style.css"/>
@@ -16,14 +18,11 @@
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="/static/assets/jail.svg">
     
+    <script src="/static/js/index.js" type="module"></script>
+    
     {% block extra_css %}{% endblock %}
 </head>
 <body>
-    <!-- Bootstrap 5 JS Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/js/tristate_checkbox.js"></script>
-    <script src="/static/js/toggle_theme.js"></script>
-    
     <nav class="navbar navbar-light bg-ligth">
         <div class="container">
             <a class="navbar-brand" href="/">
