--- a/Client/src/templates/room.html
+++ b/Client/src/templates/room.html
@@ -8,7 +8,7 @@
 <div class="mt-5">
         <h1 class="text-center">Room id: {{ room_data.id }}</h1>
         <div class="row">
-            <div class="col-6">
+            <div class="col-md-6 col-sm-12">
                 <div class="card shadow mb-3">
                     <div class="card-body">
                         <hr data-content="General" class="hr-text"/>
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-md-6 col-sm-12">
                 <div class="card shadow mb-3">
                     <div class="card-body">
                         <hr data-content="History" class="hr-text"/>
