Added scrolling on the timeline

--- a/Client/src/static/css/style.css
+++ b/Client/src/static/css/style.css
@@ -1,9 +1,4 @@
-@import "table.css";
-@import "tristate_checkbox.css";
-@import "horizontal_break.css";
-@import "timeline.css";
-
-.overflow-auto {
-    max-height: 100%;
-    overflow-y: auto;
-}
+@import "./table.css";
+@import "./tristate_checkbox.css";
+@import "./horizontal_break.css";
+@import "./timeline.css";
