--- a/Client/src/static/css/timeline.css
+++ b/Client/src/static/css/timeline.css
@@ -1,6 +1,13 @@
 .timeline {
     position: relative;
     padding: 20px 0;
+    /* Bootstrap md and bigger */
+    @media (min-width: 768px) {
+        /* Height of the room details card */
+        max-height: 666px; 
+        overflow-y: auto;
+    }
+
 }
 
 .timeline::before {
