--- a/Client/src/templates/room.html
+++ b/Client/src/templates/room.html
@@ -9,11 +9,12 @@
         <h1 class="text-center">Room id: {{ room_data.id }}</h1>
         <div class="row d-flex">
             <div class="col-md-6 col-sm-12 d-flex">
-                <div class="card shadow mb-3 flex-grow-1 flex-shrink-1">
-                    <div class="card-body overflow-auto">
+                <div class="card shadow mb-3 flex-grow-1">
+                    <div class="card-body">
                         <hr data-content="General" class="hr-text"/>
                         {{ room_label("Title:", room_data.name) }}
                         {{ room_label("Rent:", "£"+room_data.price_per_month_gbp|string) }}
+                        
                         <hr data-content="Location" class="hr-text"/>
                         {{ room_label("City", room_data.location.city) }}
                         {{ room_label("County", room_data.location.county) }}
@@ -29,6 +30,7 @@
                         {{ room_label("Spoken Languages:", spoken_languages) }}
                         {{ room_label("Available date:", available_date) }}
                         {{ room_label("Shared with:", room_data.details.shared_with|string) }}
+
                         <hr data-content="Amenities" class="hr-text"/>
                         {{ room_label("Amenities:", amenities) }}
                         {{ room_label("Furnished:", room_data.details.furnished) }}
@@ -39,8 +41,8 @@
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 d-flex">
-                <div class="card shadow mb-3 flex-grow-1 flex-shrink-1">
-                    <div class="card-body overflow-auto">
+                <div class="card shadow mb-3 flex-grow-1">
+                    <div class="card-body">
                         <hr data-content="History" class="hr-text"/>
                         {% if history.applications | length == 0 %}
                             <div class="row">
