Removed drop shadow from buttons

--- a/Client/src/templates/room.html
+++ b/Client/src/templates/room.html
@@ -69,7 +69,7 @@
                                 <input type="text" class="form-control mb-3" id="userIdField" name="user_id" placeholder="User id..."/>
                             </div>
                             <div class="col-lg-2 col-md-12 col-sm-12">
-                                <button type="submit" class="btn btn-primary mb-3 rounded shadow-lg w-100">Apply</button>
+                                <button type="submit" class="btn btn-primary mb-3 rounded w-100">Apply</button>
                             </div>
                         </div>
                     </form>
@@ -89,7 +89,7 @@
                                 <input type="text" class="form-control mb-3" id="userIdField" name="user_id" placeholder="User id..."/>
                             </div>
                             <div class="col-lg-2 col-md-12 col-sm-12">
-                                <button type="submit" class="btn btn-primary mb-3 rounded shadow-lg w-100">Cancel</button>
+                                <button type="submit" class="btn btn-primary mb-3 rounded w-100">Cancel</button>
                             </div>
                         </div>
                         <input type="hidden" name="room_id" value="{{ room_data.id }}"/>
