Added GeoCoding card

--- a/Client/src/templates/base.html
+++ b/Client/src/templates/base.html
@@ -18,7 +18,11 @@
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="/static/assets/jail.svg">
     
+    <!-- custom js -->
     <script src="/static/js/index.js" type="module"></script>
+
+    <!-- external libs -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     
     {% block extra_css %}{% endblock %}
 </head>
