Added proximity card

--- a/Client/src/templates/room.html
+++ b/Client/src/templates/room.html
@@ -102,6 +102,34 @@
         <div class="col-md-6 col-sm-12">
             <div class="card shadow mb-3">
                 <div class="card-body">
+                    <form id="proximityForm" action="{{ url_for('app.proximity')}}" method="GET">
+                        <hr data-content="Calculate proximity" class="hr-text" />
+                        <div class="row">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
+                                <input type="number" step="any" class="form-control mb-3" id="latitude0Field" name="lat_0" placeholder="Start latitude..." value="{{ room_data.coordinates.latitude }}"/>
+                            </div>
+                            <div class="col-lg-6 col-md-12 col-sm-12">
+                                <input type="number" step="any" class="form-control mb-3" id="longitude0Field" name="lon_0" placeholder="Start longitude..." value="{{ room_data.coordinates.longitude }}"/>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6 col-md-12 col-sm-12">
+                                <input type="number" step="any" class="form-control mb-3" id="latitude1Field" name="lat_1" placeholder="End latitude..."/>
+                            </div>
+                            <div class="col-lg-6 col-md-12 col-sm-12">
+                                <input type="number" step="any" class="form-control mb-3" id="longitude1Field" name="lon_1" placeholder="End longitude..."/>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary mb-3 rounded w-100">Calculate</button>
+                        <div class="row">
+                            <div class="col-lg-6 cold-md-12 col-sm-12">
+                                <input type="number" class="form-control mb-3" id="durationSecondsField" placeholder="Duration in seconds..." disabled="true" />
+                            </div>
+                            <div class="col-lg-6 cold-md-12 col-sm-12">
+                                <input type="number" class="form-control mb-3" id="distanceMetersField" placeholder="Distance in meters..." disabled="true" />
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
