--- a/Client/src/templates/home.html
+++ b/Client/src/templates/home.html
@@ -29,7 +29,7 @@
                             {{ tristate_checkbox(name="bathroomShared", label="Shared bathroom") }}
                         </div>
                         <div class="row">
-                            <button type="submit" class="btn btn-primary mb-3 rounded shadow-lg">Search</button>
+                            <button type="submit" class="btn btn-primary mb-3 rounded">Search</button>
                         </div>
                     </form>
                 </div>
